--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav id="navigation__bar" class="navigation--bar">
         <a href="#" id="logo">
-            <img src="/img/logo_circle_v1.png" alt="logo-circle">
+            <img src="./img/logo_circle_v1.png" alt="logo-circle">
         </a>
         <nav class="menu">
             <a href="#Inicio">
@@ -53,13 +53,13 @@
     <div id="Inicio" class="title--heading">
         <h1>TODOS LOS REPUESTOS QUE NECESITA EN UN SOLO LUGAR</h1>
         <a class="quote__link" href="https://api.whatsapp.com/send?phone=%20573106614366&text=Hi%20I%20want%20to%20quoate%20https://circleindustry.co">
-            <img src="/img/whatsapp-logo.svg" alt="whatsapp-logo">
+            <img src="./img/whatsapp-logo.svg" alt="whatsapp-logo">
             <span>COTIZA AHORA</span>
         </a>
     </div>
    
     <div id="main--banner">
-        <img src="/img/Super-destacados.jpg" alt="banner-circle">
+        <img src="./img/Super-destacados.jpg" alt="banner-circle">
     </div>
     <section id="Nosotros">
         <p class="main__text">
@@ -71,7 +71,7 @@
         <h2 id="Productos" class="products__title">Productos</h2>
         <div class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/sellos y empaques2.jpg" alt="Seals & Packaging">
+                <img src="./img/Productos/sellos y empaques2.jpg" alt="Seals & Packaging">
             </div>
             <div id="Sellos" class="section__description">
                 <h3>SELLOS Y EMPAQUES</h3>
@@ -89,7 +89,7 @@
         </div>
         <div id="Refrigeracion" class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/Sistema de refrigeracion.jpg" alt="Refrigeration system">
+                <img src="./img/Productos/Sistema de refrigeracion.jpg" alt="Refrigeration system">
             </div>
             <div class="section__description">
                 <h3>SISTEMA DE REFRIGERACION</h3>
@@ -104,7 +104,7 @@
         </div>
         <div id="Inyeccion" class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/sistema inyeccion.jpg" alt="Injection system">
+                <img src="./img/Productos/sistema inyeccion.jpg" alt="Injection system">
             </div>
             <div class="section__description">
                 <h3>SISTEMA DE INYECCION</h3>
@@ -119,7 +119,7 @@
         </div>
         <div id="Hidraulicas" class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/PARTES HIDRAULICAS3.jpg" alt="Hydraulic parts">
+                <img src="./img/Productos/PARTES HIDRAULICAS3.jpg" alt="Hydraulic parts">
             </div>
             <div class="section__description">
                 <h3>PARTES HIDRAULICAS</h3>
@@ -136,7 +136,7 @@
         </div>
         <div id="UnidadPoder" class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/UNIDAD DE PODER2.jpg" alt="Power Unit">
+                <img src="./img/Productos/UNIDAD DE PODER2.jpg" alt="Power Unit">
             </div>
             <div class="section__description">
                 <h3>UNIDAD DE PODER </h3>
@@ -159,7 +159,7 @@
         </div>
         <div id="Electrico" class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/SISTEMA ELECTRICO.jpg" alt="Electric System">
+                <img src="./img/Productos/SISTEMA ELECTRICO.jpg" alt="Electric System">
             </div>
             <div class="section__description">
                 <h3>SISTEMA ELECTRICO</h3>
@@ -187,7 +187,7 @@
         </div>
         <div id="Desgaste" class="products__section">
             <div class="section__img">
-                <img src="/img/Productos/partes de desgaste.jpg" alt="Harvester wear parts">
+                <img src="./img/Productos/partes de desgaste.jpg" alt="Harvester wear parts">
             </div>
             <div class="section__description">
                 <h3>PARTES DE DESGASTE COSECHADORAS</h3>
@@ -208,32 +208,32 @@
     <section class="brands">
         <h2 id="Marcas" class="brands__title">Marcas</h2>
         <div class="brands__logos">
-            <img class="brands__image" src="/img/Logos/Kupro.png" alt="KUPRO"> 
-            <img class="brands__image" src="/img/Logos/cummins-logo.png" alt="Cummis">
-            <img class="brands__image" src="/img/Logos/jost.png" alt="Jost">
-            <img class="brands__image" src="/img/Logos/volvo logo 2.png" alt="Volvo">
-            <img class="brands__image" src="/img/Logos/HITACHI.jpg" alt="Hitachi">
-            <img class="brands__image" src="/img/Logos/CAT.jpg" alt="Cat">
-            <img class="brands__image" src="/img/Logos/gates.png" alt="Gates">
-            <img class="brands__image" src="/img/Logos/johking.png" alt="Jhonking">
-            <img class="brands__image" src="/img/Logos/parker LOGO.png" alt="Parker">
-            <img class="brands__image" src="/img/Logos/Vectra.jpeg" alt="Vectra">
-            <img class="brands__image" src="/img/Logos/Massey_Ferguson logo.png" alt="Massey">
-            <img class="brands__image" src="/img/Logos/kubota.png" alt="Diesel Kubota">
-            <img class="brands__image" src="/img/Logos/sauerdanfoss.png" alt="Sauer Danfoss">
-            <img class="brands__image" src="/img/Logos/maxiforce_logo_2021.png" alt="MaxiForce">
-            <img class="brands__image" src="/img/Logos/mercedes.png" alt="Mercedes Benz">
-            <img class="brands__image" src="/img/Logos/jan.png" alt="Jan">
-            <img class="brands__image" src="/img/Logos/geomaq.png" alt="Geomac">
-            <img class="brands__image" src="/img/Logos/logo_fleetguard_large.png" alt="Fletguard">
-            <img class="brands__image" src="/img/Logos/Eaton.png" alt="Eaton">
-            <img class="brands__image" src="/img/Logos/A&I+Products-colour.png" alt="AeI Products">
-            <img class="brands__image" src="/img/Logos/Donaldson-Logo.gif" alt="Donaldson">
-            <img class="brands__image" src="/img/Logos/komatsu.png" alt="Komatsu">
-            <img class="brands__image" src="/img/Logos/john deere logo.png " alt="Jhondeere ">
-            <img class="brands__image" src="/img/Logos/Semperit.png" alt="Semperit">
-            <img class="brands__image" src="/img/Logos/Denso.png" alt="Denso">
-            <img class="brands__image" src="/img/Logos/Berco.png" alt="Berco">
+            <img class="brands__image" src="./img/Logos/Kupro.png" alt="KUPRO"> 
+            <img class="brands__image" src="./img/Logos/cummins-logo.png" alt="Cummis">
+            <img class="brands__image" src="./img/Logos/jost.png" alt="Jost">
+            <img class="brands__image" src="./img/Logos/volvo logo 2.png" alt="Volvo">
+            <img class="brands__image" src="./img/Logos/HITACHI.jpg" alt="Hitachi">
+            <img class="brands__image" src="./img/Logos/CAT.jpg" alt="Cat">
+            <img class="brands__image" src="./img/Logos/gates.png" alt="Gates">
+            <img class="brands__image" src="./img/Logos/johking.png" alt="Jhonking">
+            <img class="brands__image" src="./img/Logos/parker LOGO.png" alt="Parker">
+            <img class="brands__image" src="./img/Logos/Vectra.jpeg" alt="Vectra">
+            <img class="brands__image" src="./img/Logos/Massey_Ferguson logo.png" alt="Massey">
+            <img class="brands__image" src="./img/Logos/kubota.png" alt="Diesel Kubota">
+            <img class="brands__image" src="./img/Logos/sauerdanfoss.png" alt="Sauer Danfoss">
+            <img class="brands__image" src="./img/Logos/maxiforce_logo_2021.png" alt="MaxiForce">
+            <img class="brands__image" src="./img/Logos/mercedes.png" alt="Mercedes Benz">
+            <img class="brands__image" src="./img/Logos/jan.png" alt="Jan">
+            <img class="brands__image" src="./img/Logos/geomaq.png" alt="Geomac">
+            <img class="brands__image" src="./img/Logos/logo_fleetguard_large.png" alt="Fletguard">
+            <img class="brands__image" src="./img/Logos/Eaton.png" alt="Eaton">
+            <img class="brands__image" src="./img/Logos/A&I+Products-colour.png" alt="AeI Products">
+            <img class="brands__image" src="./img/Logos/Donaldson-Logo.gif" alt="Donaldson">
+            <img class="brands__image" src="./img/Logos/komatsu.png" alt="Komatsu">
+            <img class="brands__image" src="./img/Logos/john deere logo.png " alt="Jhondeere ">
+            <img class="brands__image" src="./img/Logos/Semperit.png" alt="Semperit">
+            <img class="brands__image" src="./img/Logos/Denso.png" alt="Denso">
+            <img class="brands__image" src="./img/Logos/Berco.png" alt="Berco">
         </div>
     </section>
     <footer class="contact">
