inicio link fixed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="./img/logo_circle_v1.png" alt="logo-circle">
         </a>
         <nav class="menu">
-            <a href="#Inicio">
+            <a href="#">
                 Inicio
             </a>
             <a href="#Nosotros">
