--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </nav>
     </nav>
     <div id="Inicio" class="title--heading">
-        <h1>TODOS LOS REPUESTOS QUE NECESITA EN UN SOLO LUGAR</h1>
-        <a class="quote__link" href="https://api.whatsapp.com/send?phone=%20573106614366&text=Hi%20I%20want%20to%20quoate%20https://circleindustry.co">
+       <p class="title__main">TODOS LOS REPUESTOS QUE NECESITA EN UN SOLO LUGAR</p>
+        <a class="quote__link" href="https://api.whatsapp.com/send?phone=%20573106614366&text=Hola%20quiero%20cotizar%20con%20circleindustryllc.com" target="_blank">
             <img src="./img/whatsapp-logo.svg" alt="whatsapp-logo">
             <span>COTIZA AHORA</span>
         </a>
@@ -69,171 +69,173 @@
     </section>
     <section class="products">
         <h2 id="Productos" class="products__title">Productos</h2>
-        <div class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/sellos y empaques2.jpg" alt="Seals & Packaging">
+        <div class="sections">
+            <div class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/sellos y empaques2.jpg" alt="Seals & Packaging">
+                </div>
+                <div id="Sellos" class="section__description hideSubList">
+                    <h3>SELLOS Y EMPAQUES</h3>
+                    <ul>
+                        <li>Anillos de aceite</li>
+                        <li>Sellos metálicos</li>
+                        <li>Anillos de aceite</li>
+                        <li>Sellos de aceite</li>
+                        <li>sellos de endoso</li>
+                        <li>Cojín de sellos</li>
+                        <li>Sellos de cigüeñal</li>
+                        <li>Sellos hidraulicos</li>
+                    </ul>
+                </div>
             </div>
-            <div id="Sellos" class="section__description">
-                <h3>SELLOS Y EMPAQUES</h3>
-                <ul>
-                    <li>Anillos de aceite</li>
-                    <li>Sellos metálicos</li>
-                    <li>Anillos de aceite</li>
-                    <li>Sellos de aceite</li>
-                    <li>sellos de endoso</li>
-                    <li>Cojín de sellos</li>
-                    <li>Sellos de cigüeñal</li>
-                    <li>Sellos hidraulicos</li>
-                </ul>
+            <div id="Refrigeracion" class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/Sistema de refrigeracion.jpg" alt="Refrigeration system">
+                </div>
+                <div class="section__description hideSubList">
+                    <h3>SISTEMA DE REFRIGERACION</h3>
+                    <ul>
+                        <li>Ventiladores estándar</li>
+                        <li>Ventiladores reversibles</li>
+                        <li>Radiadores</li>
+                        <li>Bombas de agua</li>
+                        <li>Termostatos</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div id="Refrigeracion" class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/Sistema de refrigeracion.jpg" alt="Refrigeration system">
+            <div id="Inyeccion" class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/sistema inyeccion.jpg" alt="Injection system">
+                </div>
+                <div class="section__description hideSubList">
+                    <h3>SISTEMA DE INYECCION</h3>
+                    <ul>
+                        <li>Boquillas</li>
+                        <li>Inyectores</li>
+                        <li>Kit de válvula de inyección</li>
+                        <li>Sistema de inyección de bomba</li>
+                        <li>Válvula de gasolina</li>
+                    </ul>
+                </div>
             </div>
-            <div class="section__description">
-                <h3>SISTEMA DE REFRIGERACION</h3>
-                <ul>
-                    <li>Ventiladores estándar</li>
-                    <li>Ventiladores reversibles</li>
-                    <li>Radiadores</li>
-                    <li>Bombas de agua</li>
-                    <li>Termostatos</li>
-                </ul>
+            <div id="Hidraulicas" class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/PARTES HIDRAULICAS3.jpg" alt="Hydraulic parts">
+                </div>
+                <div class="section__description hideSubList">
+                    <h3>PARTES HIDRAULICAS</h3>
+                    <ul>
+                        <li>Cartridges</li>
+                        <li>Cilindros hidráulicos y pistones</li>
+                        <li>Engranaje hidráulico</li>
+                        <li>Válvulas hidráulicas</li>
+                        <li>Cilindros hidraulicos</li>
+                        <li>Sellos hidráulicos</li>
+                        <li>Motores hidráulicos</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div id="Inyeccion" class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/sistema inyeccion.jpg" alt="Injection system">
+            <div id="UnidadPoder" class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/UNIDAD DE PODER2.jpg" alt="Power Unit">
+                </div>
+                <div class="section__description hideSubList">
+                    <h3>UNIDAD DE PODER </h3>
+                    <ul>
+                        <li>Reductores </li>
+                        <li>Esparcidores</li>
+                        <li>Ejes</li>
+                        <li>Cadena de transmisión</li>
+                        <li>Partes diferenciales</li>
+                        <li>Piezas de transmisión</li>
+                        <li>Bombas de aire</li>
+                        <li>Caja de engranajes</li>
+                        <li>Brida</li>
+                        <li>Embrague de dirección</li>
+                        <li>Juntas universales y crucetas</li>
+                        <li>Soportes</li>
+                        <li>Bomba de dirección</li>
+                    </ul>
+                </div>
             </div>
-            <div class="section__description">
-                <h3>SISTEMA DE INYECCION</h3>
-                <ul>
-                    <li>Boquillas</li>
-                    <li>Inyectores</li>
-                    <li>Kit de válvula de inyección</li>
-                    <li>Sistema de inyección de bomba</li>
-                    <li>Válvula de gasolina</li>
-                </ul>
+            <div id="Electrico" class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/SISTEMA ELECTRICO.jpg" alt="Electric System">
+                </div>
+                <div class="section__description hideSubList">
+                    <h3>SISTEMA ELECTRICO</h3>
+                    <ul>
+                        <li>Arranques</li>
+                        <li>Controladores </li>
+                        <li>Interruptores</li>
+                        <li>Fusibles</li>
+                        <li>Bobina de campo</li>
+                        <li>Reguladores</li>
+                        <li>Relé de potencia</li>
+                        <li>Sensores</li>
+                        <li>Motor de arranque</li>
+                        <li>terminales eléctricos</li>
+                        <li>Par termoeléctrico</li>
+                        <li>Alternadores</li>
+                        <li>Solenoides</li>
+                        <li>Interruptores de arranque</li>
+                        <li>Inducido</li>
+                        <li>indicadores</li>
+                        <li>Compresor de aire</li>
+                        <li>Válvulas de expansión</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div id="Hidraulicas" class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/PARTES HIDRAULICAS3.jpg" alt="Hydraulic parts">
+            <div id="Desgaste" class="products__section">
+                <div class="section__img">
+                    <img src="./img/Productos/partes de desgaste.jpg" alt="Harvester wear parts">
+                </div>
+                <div class="section__description hideSubList">
+                    <h3>PARTES DE DESGASTE COSECHADORAS</h3>
+                    <ul>
+                        <li>Aspas extractor primario y secundario</li>
+                        <li>Discos de base</li>
+                        <li>Piernas de base</li>
+                        <li>Tabillas elevador</li>
+                        <li>Sprokets de elevador</li>
+                        <li>Rolos</li>
+                        <li>Basculantes curvos y rectos</li>
+                        <li>Pisos elevador</li>
+                        <li>Carcaza rolos</li>
+                    </ul>
+                </div>
             </div>
-            <div class="section__description">
-                <h3>PARTES HIDRAULICAS</h3>
-                <ul>
-                    <li>Cartridges</li>
-                    <li>Cilindros hidráulicos y pistones</li>
-                    <li>Engranaje hidráulico</li>
-                    <li>Válvulas hidráulicas</li>
-                    <li>Cilindros hidraulicos</li>
-                    <li>Sellos hidráulicos</li>
-                    <li>Motores hidráulicos</li>
-                </ul>
+        </section>
+        <section class="brands">
+            <h2 id="Marcas" class="brands__title">Marcas</h2>
+            <div class="brands__logos">
+                <img class="brands__image" src="./img/Logos/Kupro.png" alt="KUPRO"> 
+                <img class="brands__image" src="./img/Logos/cummins-logo.png" alt="Cummis">
+                <img class="brands__image" src="./img/Logos/jost.png" alt="Jost">
+                <img class="brands__image" src="./img/Logos/volvo logo 2.png" alt="Volvo">
+                <img class="brands__image" src="./img/Logos/HITACHI.jpg" alt="Hitachi">
+                <img class="brands__image" src="./img/Logos/CAT.jpg" alt="Cat">
+                <img class="brands__image" src="./img/Logos/gates.png" alt="Gates">
+                <img class="brands__image" src="./img/Logos/johking.png" alt="Jhonking">
+                <img class="brands__image" src="./img/Logos/parker LOGO.png" alt="Parker">
+                <img class="brands__image" src="./img/Logos/Vectra.jpeg" alt="Vectra">
+                <img class="brands__image" src="./img/Logos/Massey_Ferguson logo.png" alt="Massey">
+                <img class="brands__image" src="./img/Logos/kubota.png" alt="Diesel Kubota">
+                <img class="brands__image" src="./img/Logos/sauerdanfoss.png" alt="Sauer Danfoss">
+                <img class="brands__image" src="./img/Logos/maxiforce_logo_2021.png" alt="MaxiForce">
+                <img class="brands__image" src="./img/Logos/mercedes.png" alt="Mercedes Benz">
+                <img class="brands__image" src="./img/Logos/jan.png" alt="Jan">
+                <img class="brands__image" src="./img/Logos/geomaq.png" alt="Geomac">
+                <img class="brands__image" src="./img/Logos/logo_fleetguard_large.png" alt="Fletguard">
+                <img class="brands__image" src="./img/Logos/Eaton.png" alt="Eaton">
+                <img class="brands__image" src="./img/Logos/A&I+Products-colour.png" alt="AeI Products">
+                <img class="brands__image" src="./img/Logos/Donaldson-Logo.gif" alt="Donaldson">
+                <img class="brands__image" src="./img/Logos/komatsu.png" alt="Komatsu">
+                <img class="brands__image" src="./img/Logos/john deere logo.png " alt="Jhondeere ">
+                <img class="brands__image" src="./img/Logos/Semperit.png" alt="Semperit">
+                <img class="brands__image" src="./img/Logos/Denso.png" alt="Denso">
+                <img class="brands__image" src="./img/Logos/Berco.png" alt="Berco">
             </div>
-        </div>
-        <div id="UnidadPoder" class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/UNIDAD DE PODER2.jpg" alt="Power Unit">
-            </div>
-            <div class="section__description">
-                <h3>UNIDAD DE PODER </h3>
-                <ul>
-                    <li>Reductores </li>
-                    <li>Esparcidores</li>
-                    <li>Ejes</li>
-                    <li>Cadena de transmisión</li>
-                    <li>Partes diferenciales</li>
-                    <li>Piezas de transmisión</li>
-                    <li>Bombas de aire</li>
-                    <li>Caja de engranajes</li>
-                    <li>Brida</li>
-                    <li>Embrague de dirección</li>
-                    <li>Juntas universales y crucetas</li>
-                    <li>Soportes</li>
-                    <li>Bomba de dirección</li>
-                </ul>
-            </div>
-        </div>
-        <div id="Electrico" class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/SISTEMA ELECTRICO.jpg" alt="Electric System">
-            </div>
-            <div class="section__description">
-                <h3>SISTEMA ELECTRICO</h3>
-                <ul>
-                    <li>Arranques</li>
-                    <li>Controladores </li>
-                    <li>Interruptores</li>
-                    <li>Fusibles</li>
-                    <li>Bobina de campo</li>
-                    <li>Reguladores</li>
-                    <li>Relé de potencia</li>
-                    <li>Sensores</li>
-                    <li>Motor de arranque</li>
-                    <li>terminales eléctricos</li>
-                    <li>Par termoeléctrico</li>
-                    <li>Alternadores</li>
-                    <li>Solenoides</li>
-                    <li>Interruptores de arranque</li>
-                    <li>Inducido</li>
-                    <li>indicadores</li>
-                    <li>Compresor de aire</li>
-                    <li>Válvulas de expansión</li>
-                </ul>
-            </div>
-        </div>
-        <div id="Desgaste" class="products__section">
-            <div class="section__img">
-                <img src="./img/Productos/partes de desgaste.jpg" alt="Harvester wear parts">
-            </div>
-            <div class="section__description">
-                <h3>PARTES DE DESGASTE COSECHADORAS</h3>
-                <ul>
-                    <li>Aspas extractor primario y secundario</li>
-                    <li>Discos de base</li>
-                    <li>Piernas de base</li>
-                    <li>Tabillas elevador</li>
-                    <li>Sprokets de elevador</li>
-                    <li>Rolos</li>
-                    <li>Basculantes curvos y rectos</li>
-                    <li>Pisos elevador</li>
-                    <li>Carcaza rolos</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <section class="brands">
-        <h2 id="Marcas" class="brands__title">Marcas</h2>
-        <div class="brands__logos">
-            <img class="brands__image" src="./img/Logos/Kupro.png" alt="KUPRO"> 
-            <img class="brands__image" src="./img/Logos/cummins-logo.png" alt="Cummis">
-            <img class="brands__image" src="./img/Logos/jost.png" alt="Jost">
-            <img class="brands__image" src="./img/Logos/volvo logo 2.png" alt="Volvo">
-            <img class="brands__image" src="./img/Logos/HITACHI.jpg" alt="Hitachi">
-            <img class="brands__image" src="./img/Logos/CAT.jpg" alt="Cat">
-            <img class="brands__image" src="./img/Logos/gates.png" alt="Gates">
-            <img class="brands__image" src="./img/Logos/johking.png" alt="Jhonking">
-            <img class="brands__image" src="./img/Logos/parker LOGO.png" alt="Parker">
-            <img class="brands__image" src="./img/Logos/Vectra.jpeg" alt="Vectra">
-            <img class="brands__image" src="./img/Logos/Massey_Ferguson logo.png" alt="Massey">
-            <img class="brands__image" src="./img/Logos/kubota.png" alt="Diesel Kubota">
-            <img class="brands__image" src="./img/Logos/sauerdanfoss.png" alt="Sauer Danfoss">
-            <img class="brands__image" src="./img/Logos/maxiforce_logo_2021.png" alt="MaxiForce">
-            <img class="brands__image" src="./img/Logos/mercedes.png" alt="Mercedes Benz">
-            <img class="brands__image" src="./img/Logos/jan.png" alt="Jan">
-            <img class="brands__image" src="./img/Logos/geomaq.png" alt="Geomac">
-            <img class="brands__image" src="./img/Logos/logo_fleetguard_large.png" alt="Fletguard">
-            <img class="brands__image" src="./img/Logos/Eaton.png" alt="Eaton">
-            <img class="brands__image" src="./img/Logos/A&I+Products-colour.png" alt="AeI Products">
-            <img class="brands__image" src="./img/Logos/Donaldson-Logo.gif" alt="Donaldson">
-            <img class="brands__image" src="./img/Logos/komatsu.png" alt="Komatsu">
-            <img class="brands__image" src="./img/Logos/john deere logo.png " alt="Jhondeere ">
-            <img class="brands__image" src="./img/Logos/Semperit.png" alt="Semperit">
-            <img class="brands__image" src="./img/Logos/Denso.png" alt="Denso">
-            <img class="brands__image" src="./img/Logos/Berco.png" alt="Berco">
         </div>
     </section>
     <footer class="contact">
