menu product list toggle category sublist

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                 <li><a href="#Productos">Productos</a></li>
                 <ul id="ProductCategories" class="menu__product--list">
                     <li>
-                        <a href="#Sellos">Sellos y empaques</a>
+                        <a href="#Sellos" class="product__list--link">Sellos y empaques</a>
                     </li>
                     <li>
-                        <a href="#Refrigeracion">Sistema de refrigeracion</a>
+                        <a href="#Refrigeracion" class="product__list--link">Sistema de refrigeracion</a>
                     </li>
                     <li>
-                        <a href="#Inyeccion">Sistema de inyección</a>
+                        <a href="#Inyeccion" class="product__list--link">Sistema de inyección</a>
                     </li>
                     <li>
-                        <a href="#Hidraulicas">Partes hidráulicas</a>
+                        <a href="#Hidraulicas" class="product__list--link">Partes hidráulicas</a>
                     </li>
                     <li>
-                        <a href="#UnidadPoder">Unidad de poder</a>
+                        <a href="#UnidadPoder" class="product__list--link">Unidad de poder</a>
                     </li>
                     <li>
-                        <a href="#Electrico">Sistema eléctrico</a>
+                        <a href="#Electrico" class="product__list--link">Sistema eléctrico</a>
                     </li>
                     <li>
-                        <a href="#Desgaste">Partes de desgaste cosechadoras</a>
+                        <a href="#Desgaste" class="product__list--link">Partes de desgaste cosechadoras</a>
                     </li>
                 </ul>
             </ul>
@@ -71,10 +71,10 @@
         <h2 id="Productos" class="products__title">Productos</h2>
         <div class="sections">
             <div class="products__section">
-                <div class="section__img">
+                <div id="Sellos" class="section__img">
                     <img src="./img/Productos/sellos y empaques2.jpg" alt="Seals & Packaging">
                 </div>
-                <div id="Sellos" class="section__description hideSubList">
+                <div class="section__description hideSubList">
                     <h3>SELLOS Y EMPAQUES</h3>
                     <ul>
                         <li>Anillos de aceite</li>
@@ -88,8 +88,8 @@
                     </ul>
                 </div>
             </div>
-            <div id="Refrigeracion" class="products__section">
-                <div class="section__img">
+            <div class="products__section">
+                <div  id="Refrigeracion"  class="section__img">
                     <img src="./img/Productos/Sistema de refrigeracion.jpg" alt="Refrigeration system">
                 </div>
                 <div class="section__description hideSubList">
@@ -103,8 +103,8 @@
                     </ul>
                 </div>
             </div>
-            <div id="Inyeccion" class="products__section">
-                <div class="section__img">
+            <div  class="products__section">
+                <div id="Inyeccion" class="section__img">
                     <img src="./img/Productos/sistema inyeccion.jpg" alt="Injection system">
                 </div>
                 <div class="section__description hideSubList">
@@ -118,8 +118,8 @@
                     </ul>
                 </div>
             </div>
-            <div id="Hidraulicas" class="products__section">
-                <div class="section__img">
+            <div class="products__section">
+                <div id="Hidraulicas" class="section__img">
                     <img src="./img/Productos/PARTES HIDRAULICAS3.jpg" alt="Hydraulic parts">
                 </div>
                 <div class="section__description hideSubList">
@@ -135,8 +135,8 @@
                     </ul>
                 </div>
             </div>
-            <div id="UnidadPoder" class="products__section">
-                <div class="section__img">
+            <div class="products__section">
+                <div id="UnidadPoder" class="section__img">
                     <img src="./img/Productos/UNIDAD DE PODER2.jpg" alt="Power Unit">
                 </div>
                 <div class="section__description hideSubList">
@@ -158,8 +158,8 @@
                     </ul>
                 </div>
             </div>
-            <div id="Electrico" class="products__section">
-                <div class="section__img">
+            <div class="products__section">
+                <div id="Electrico" class="section__img">
                     <img src="./img/Productos/SISTEMA ELECTRICO.jpg" alt="Electric System">
                 </div>
                 <div class="section__description hideSubList">
@@ -186,8 +186,8 @@
                     </ul>
                 </div>
             </div>
-            <div id="Desgaste" class="products__section">
-                <div class="section__img">
+            <div class="products__section">
+                <div id="Desgaste" class="section__img">
                     <img src="./img/Productos/partes de desgaste.jpg" alt="Harvester wear parts">
                 </div>
                 <div class="section__description hideSubList">
