font, images size

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
     </nav>
     <div id="Inicio" class="title--heading">
-       <p class="title__main">TODOS LOS REPUESTOS QUE NECESITA EN UN SOLO LUGAR</p>
+       <p class="title__main">TODOS LOS REPUESTOS QUE NECESITAS EN UN SOLO LUGAR</p>
         <a class="quote__link" href="https://api.whatsapp.com/send?phone=%20573106614366&text=Hola%20quiero%20cotizar%20con%20circleindustryllc.com" target="_blank">
             <img src="./img/whatsapp-logo.svg" alt="whatsapp-logo">
             <span>COTIZA AHORA</span>
