--- a/index.html
+++ b/index.html
@@ -209,32 +209,7 @@
         <section class="brands">
             <h2 id="Marcas" class="brands__title">Marcas</h2>
             <div class="brands__logos">
-                <img class="brands__image" src="./img/Logos/Kupro.png" alt="KUPRO"> 
-                <img class="brands__image" src="./img/Logos/cummins-logo.png" alt="Cummis">
-                <img class="brands__image" src="./img/Logos/jost.png" alt="Jost">
-                <img class="brands__image" src="./img/Logos/volvo logo 2.png" alt="Volvo">
-                <img class="brands__image" src="./img/Logos/HITACHI.jpg" alt="Hitachi">
-                <img class="brands__image" src="./img/Logos/CAT.jpg" alt="Cat">
-                <img class="brands__image" src="./img/Logos/gates.png" alt="Gates">
-                <img class="brands__image" src="./img/Logos/johking.png" alt="Jhonking">
-                <img class="brands__image" src="./img/Logos/parker LOGO.png" alt="Parker">
-                <img class="brands__image" src="./img/Logos/Vectra.jpeg" alt="Vectra">
-                <img class="brands__image" src="./img/Logos/Massey_Ferguson logo.png" alt="Massey">
-                <img class="brands__image" src="./img/Logos/kubota.png" alt="Diesel Kubota">
-                <img class="brands__image" src="./img/Logos/sauerdanfoss.png" alt="Sauer Danfoss">
-                <img class="brands__image" src="./img/Logos/maxiforce_logo_2021.png" alt="MaxiForce">
-                <img class="brands__image" src="./img/Logos/mercedes.png" alt="Mercedes Benz">
-                <img class="brands__image" src="./img/Logos/jan.png" alt="Jan">
-                <img class="brands__image" src="./img/Logos/geomaq.png" alt="Geomac">
-                <img class="brands__image" src="./img/Logos/logo_fleetguard_large.png" alt="Fletguard">
-                <img class="brands__image" src="./img/Logos/Eaton.png" alt="Eaton">
-                <img class="brands__image" src="./img/Logos/A&I+Products-colour.png" alt="AeI Products">
-                <img class="brands__image" src="./img/Logos/Donaldson-Logo.gif" alt="Donaldson">
-                <img class="brands__image" src="./img/Logos/komatsu.png" alt="Komatsu">
-                <img class="brands__image" src="./img/Logos/john deere logo.png " alt="Jhondeere ">
-                <img class="brands__image" src="./img/Logos/Semperit.png" alt="Semperit">
-                <img class="brands__image" src="./img/Logos/Denso.png" alt="Denso">
-                <img class="brands__image" src="./img/Logos/Berco.png" alt="Berco">
+                <img src="./img/Diseño sin título.svg" alt="logos">
             </div>
         </div>
     </section>
