text style and main title position

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav id="navigation__bar" class="navigation--bar">
         <a href="#" id="logo">
-            <img src="./img/logo_circle_v1.png" alt="logo-circle">
+            <img src="./img/logo_circle_dark_bg_horizontal.png" alt="logo-circle">
         </a>
         <nav class="menu">
             <a href="#">
@@ -50,18 +50,19 @@
             </a>
         </nav>
     </nav>
-    <div id="Inicio" class="title--heading">
-       <p class="title__main">TODOS LOS REPUESTOS QUE NECESITAS EN UN SOLO LUGAR</p>
+    
+    <div id="main--banner">
+        <img src="./img/Super-destacados.jpg" alt="banner-circle">
+    </div>
+
+    <div id="Nosotros" class="title--heading">
+       <p class="title__main">Todos los repuestos que necesitas en un solo lugar</p>
         <a class="quote__link" href="https://api.whatsapp.com/send?phone=%20573106614366&text=Hola%20quiero%20cotizar%20con%20circleindustryllc.com" target="_blank">
             <img src="./img/whatsapp-logo.svg" alt="whatsapp-logo">
             <span>COTIZA AHORA</span>
         </a>
     </div>
-   
-    <div id="main--banner">
-        <img src="./img/Super-destacados.jpg" alt="banner-circle">
-    </div>
-    <section id="Nosotros">
+    <section>
         <p class="main__text">
             Somos una empresa comercial, confiable y con los costos más competitivos del mercado. con más de 20 años de experiencia y conocimientos, 
             en repuestos y partes para maquinaria agrícola, construcción y transporte en OEM y genérico. Teniendo un amplio portafolio de marcas.
