brands image changed

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <section class="brands">
             <h2 id="Marcas" class="brands__title">Marcas</h2>
             <div class="brands__logos">
-                <img src="./img/Diseño sin título.svg" alt="logos">
+                <img src="./img/image0.png" alt="logos">
             </div>
         </div>
     </section>
